--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.0",
+    "prisma": "^6.2.1",
     "rimraf": "^6.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@prisma/client": "^6.2.1",
     "dotenv": "^16.4.5",
     "env-var": "^7.5.0",
     "express": "^4.21.1"
